<resources>
    <string name="app_name">Wallet</string>
    <string name="buy_inBuySlide">Buy</string>
    <string name="showAllNetworks_buySlide">All Networks</string>
    <string name="btc_islam_text">BTC</string>
    <string name="eth_islam_text">ETH</string>
    <string name="bnb_islam_text">BnB</string>
    <string name="matic_islam_text">MATIC</string>
    <string name="bnbtwo_islam_text">BNB</string>
    <string name="xrp_islam_text">XRP</string>
    <string name="bch_islam_text">BCH</string>
    <string name="ltc_islam_text">LTC</string>
    <string name="xlm_islam_text">XLM</string>
    <string name="price_all_crypto">0,00 $</string>
    <string name="zero_islam_text">0</string>
    <string name="swap_convert_slide">Swap</string>
    <string name="ftm_islam_text">FTM</string>
    <string name="aave_islam_text">AAVE</string>
    <string name="fantom_aave_islam_text">FANTOM</string>
    <string name="quote_convert_islam_text">Quote</string>
    <string name="quote_continuing_islam_text">1 AAVE ~ 27,474252 FTM</string>
    <string name="search_hint_buyIslam">Search</string>
    <string name="popular_buySlide_islam">Popular</string>
    <string name="ethereum_eth_buySlide">Ethereum</string>
    <string name="Bitcoin_islam">Bitcoin</string>
    <string name="all_crypto_buySlide_islam">All Crypto</string>
    <string name="price_bitcoin_islam">41 861,30$ -0.47%</string>
    <string name="price_eth_islam">2 228,86 $ -0.26%</string>
    <string name="price_bnb_islam">250,32$ +7.90%</string>
    <string name="price_matic_islam">0,86$ +1.67%</string>
    <string name="description_firstImageButton_islam">TODO</string>
    <string name="description_secondImageButton">TODO2</string>
    <string name="youPay_firstLayout_islam">You Pay</string>
    <string name="YouGet_SecondLayout_islam">You Get</string>
    <string name="buttonTextIslam_convertSlide">Preview Swap</string>
    <string name="app_name_i">Wallet</string>
    <string name="receiveMainTextGetIslam">Receive</string>
    <string name="searchHintGetIslam">Search</string>
    <string name="all_networks_get_islam">All Networks</string>
    <string name="bitcoin_getIslam">Bitcoin</string>
    <string name="btc_getIslam">BTC</string>
    <string name="ethIslamGet">ETH</string>
    <string name="ethereumIslamGet">Ethereum</string>
    <string name="bnbIslamGet">BNB</string>
    <string name="bnbDescribeIslamGet">BNB Smart Chain</string>
    <string name="twtBnbTextGet">TWT BNB Smart Chain</string>
    <string name="twtBnbPriceTextGet">Trust Wallet</string>
    <string name="maticTextIslamGet">MATIC</string>
    <string name="polygonMaticIslamGet">Polygon</string>
    <string name="bnbSecondTextGet">BNB Beacon Chain</string>
    <string name="xrpIslamGet">XRP</string>
    <string name="xrpTextIslamGet">XrP</string>
    <string name="bchIslamGet">BCH</string>
    <string name="bchTextIslamGet">Bitcoin Cash</string>
    <string name="ltcIslamGet">LTC</string>
    <string name="liteCoinTextIslamGet">LiteCoin</string>
    <string name="zero_islam_textGet">0</string>
    <string name="price_all_cryptoGet">0,00 $</string>
    <string name="xlmIslamGet">XLM</string>
    <string name="xlmTextIslamGet">Stellar</string>
    <string name="trxIslamGet">TRX</string>
    <string name="trxTextIslamGet">Tron</string>
    <string name="backButtonIslamGet">backButtonIslamGet</string>
    <string name="openAllNetworksIslamGet">openAllNetworksIslamGet</string>
    <string name="MainTextSendIslam">Send</string>
    <string name="islamImageText">No assets found</string>
    <string name="buttonIslamSend">Buy cryptocurrency</string>
    <string name="send_image_islam_description">send_image_islam</string>
    <string name="ButtonGoToAave">GoToAave</string>
    <string name="GoToFTMButton">GoToFTM</string>
    <string name="imageaaveconvert">ImageAaveConvert</string>
    <string name="ImageFTMConvert">ImageFTMConvert</string>
    <string name="SwapVertivalConvert">SwapVertivalConvert</string>
    <string name="swapHorizontalConvert">SwapHorizontalConvert</string>
    <string name="ImageWalletFTMConvert">ImageWalletFTMConvert</string>
    <string name="ImageWalletAAVEConvert">ImageWalletAAVEConvert</string>
    <string name="wallet">Wallet</string>
    <string name="wallet2">Wallet</string>
    <string name="welcome_back">Welcome,back!</string>
    <string name="enter_your_e_mail">Enter your e-mail addres</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="wallet_altynai">Wallet_Altynai</string>
    <string name="walllet">walllet</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="password_reset">Password reset</string>
    <string name="write_your_email_address_to_send_the_password_reset_code">Write your email address to send the password reset code</string>
    <string name="email">Email</string>
    <string name="send_code">Send code</string>
    <string name="e">Send Code</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="enter_the_code_sent_to_some_mail_com">Enter the code sent to some@mail.com</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google">google</string>
    <string name="backbuttonaltynaiDescription">backbuttonaltynai</string>
    <string name="buttonbackaltynai">buttonbackaltynai</string>
    <string name="ChangePasswordTextAlt">Change Password</string>
    <string name="SecondTextChangePasswordAlt">Enter the new password</string>
    <string name="edittextchangepassalt">password</string>
    <string name="EditTextChangePassSecondAlt">Confirm password</string>
    <string name="ButtonTextChangePassAlt">Change password</string>
    <string name="CongratsOfChangingPass">Your password has been successfully changed!</string>
    <string name="text_back_daniyar">Назад</string>
    <string name="create_account_text_daniyar">Create account</string>
    <string name="your_name_daniyar">Your Name</string>
    <string name="your_name_daniyare">"   Your Name"</string>
    <string name="_996">+996</string>
    <string name="phone_number_daniyar">"   Phone Number"</string>
    <string name="year_of_born_dd_mm_yyyy_daniyar">"   Year Of Born (DD/MM/YYYY)"</string>
    <string name="email_daniyar">"   Email"</string>
    <string name="password_daniyar">"   Password"</string>
    <string name="confirm_password_daniyar">"   Confirm Password"</string>
    <string name="sign_up_daniyar">Sign Up</string>
    <string name="password_must_contain_at_least_one_capital_letter_daniyar">Password must contain at least one capital letter</string>
    <string name="email_confirmation_daniyar">Email Confirmation</string>
    <string name="PleaseEnterSixDigitTextDaniyar">Please enter the 6-digit code sent to your email. The code will be valid for 30 minutes</string>
    <string name="_29_57_daniyar">29:57</string>
    <string name="_number2_daniyar">2</string>
    <string name="_number3_daniyar">3</string>
    <string name="_number_daniyar">4</string>
    <string name="_number5_daniyar">5</string>
    <string name="_number6_daniyar">6</string>
    <string name="send_code_again_daniyar">Send code again</string>
    <string name="send_code_again_teext__daniyar">Send code again</string>
    <string name="line_under_the_text_daniyar">_________________</string>
    <string name="we_have_sent_an_email_confirmation_link_to_some_mail_com_daniyar">We have sent an email confirmation link to some@mail.com</string>
    <string name="go_back_daniyar2">Go Back</string>
    <string name="profile_text_daniyar">Profile</string>
    <string name="name_daniyar">Name</string>
    <string name="mike_daniyar">Mike</string>
    <string name="surname_daniyar">Surname</string>
    <string name="brown_daniyar">Brown</string>
    <string name="email2_daniyar">Email</string>
    <string name="example_gmail_com_daniyar">example@gmail.com</string>
    <string name="line_daniyar">______________________________________________________________</string>
    <string name="assets_daniyar">Assets</string>
    <string name="btctext_daniyar">BTC</string>
    <string name="_42_228_86_price_daniyar">42 228,86 $</string>
    <string name="_5_0123_btctext_daniyar">5.0123 BTC</string>
    <string name="_211_663_714978_usdttext_daniyar">211,663.714978 USDT</string>
    <string name="ethtext_daniyar">ETH</string>
    <string name="_2_228_86_price_text_daniyar">2 228,86 $</string>
    <string name="_242_eth_text_daniyar">242 ETH</string>
    <string name="_539_384_12_usdt_daniyar">539,384.12 USDT</string>
    <string name="total_capital_daniyar">Total Capital</string>
    <string name="_751_047_834978_usdt_daniyar">751,047.834978 USDT</string>
    <string name="transaction_history_daniyart">Transaction History</string>
    <string name="_1_daniyar">1</string>
    <string name="sign_up_dani7yar">Sign Up</string>
    <string name="password_must_contain_at_least_one_capital_letter">passwordproblems_dasniyar</string>
    <string name="passwordproblemdaniyar">Password must contain at least one capital letter</string>
    <string name="sendcode"><![CDATA[<u>Send code again</u>]]></string>
    <string name="send_code_again_daniyari">Send code again</string>
    <string name="add_payment_method_daniyar">Add payment method</string>
    <string name="you_don_t_have_any_payment_methods_daniyar">You don\'t have any payment methods</string>
    <string name="add_payment_method_button_daniuyar">Add Payment Method</string>
    <string name="trade_history_daniyar">Trade history</string>
    <string name="date_daniyar">29 нобря 2023</string>
    <string name="pokupkatextdaniyar">Покупка</string>
    <string name="audtextdaniyar">AUD</string>
    <string name="avsraliiyskiy_dollar_textdaniyar">Австралийский доллар</string>
    <string name="a_19_72_price_daniyar">A$ 19.72</string>
    <string name="_14_08price_daniyar">$ 14.08</string>
    <string name="prodazhatext_daniyar">Продажа</string>
    <string name="create_password">Create password</string>
    <string name="create_password_daniyar">create_password</string>
    <string name="create_password_daniyarr">Create password</string>
    <string name="enter_the_password_and_remember_it_the_password_is_required_to_unlock_the_wallet">Enter the password and remember it. The password is required to unlock the wallet</string>
    <string name="back_button_daniyar">nazad_button</string>
    <string name="button_back_daniyar2">button_Back_daniyar2</string>
    <string name="dollar">dollar</string>
    <string name="vremenaya_knopka">временно</string>
    <string name="testbuttoncongrats">Next</string>
    <string name="search">search</string>
    <string name="home">Home</string>
    <string name="mainwallet">Основной кошелек</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="buy">Buy</string>
    <string name="swap">Swap</string>
    <string name="add_crypto">Add Crypto</string>
    <string name="crypto">Crypto</string>
    <string name="nfts">NFTs</string>
    <string name="btc">BTC</string>
    <string name="_42_228_86_0_26">42 228,86 $ -0.26%</string>
    <string name="_0">0</string>
    <string name="_0_00">0,00 $</string>
    <string name="bnb">BNB</string>
    <string name="_250_28_7_88">250,28 $ +7.88%</string>
    <string name="bnb_0">0</string>
    <string name="bnb_0_00">0,00 $</string>
    <string name="eth">ETH</string>
    <string name="_2_228_86_0_26">2 228,86 $ -0.26%</string>
    <string name="eth_0_00">0,00 $</string>
    <string name="twt_bnb_smart_chain">TWT BNB Smart Chain</string>
    <string name="continueTimeButton">Continue</string>
</resources>