<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="430dp"
    android:layout_height="932dp"
    android:background="@drawable/background"
    android:clipToOutline="true">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="224dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="92dp"
            android:layout_height="96dp"
            android:background="@drawable/logoaltynai"
            android:contentDescription="@string/walllet" />

        <TextView
            android:id="@+id/wallet2"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wallet2"
            android:textColor="@color/white"
            android:textSize="37sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="398dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="580dp"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintVertical_bias="0.166" />


    <TextView
        android:id="@+id/email"
        android:layout_width="126dp"
        android:layout_height="26dp"
        android:layout_marginTop="260dp"
        android:text="@string/e_mail_address"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:background="#251E34"
        android:hint="@string/enter_your_e_mail"
        android:textColorHint="#757575"
        android:textSize="19sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/password"
        android:layout_width="126dp"
        android:layout_height="26dp"
        android:layout_marginTop="376dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:background="#251E34"
        android:hint="@string/enter_your_password"
        android:textColorHint="#757575"
        android:textSize="19sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.024" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="436dp"
        android:background="@drawable/vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

</androidx.constraintlayout.widget.ConstraintLayout>
