<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clipToOutline="true">

    <LinearLayout
        android:id="@+id/layoutAltynaiWalletWelcomeBack"
        android:layout_width="224dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049">

        <ImageView
            android:id="@+id/logoLayoutWelcomeBack"
            android:layout_width="92dp"
            android:layout_height="96dp"
            android:background="@drawable/logoaltynai"
            android:contentDescription="@string/walllet" />

        <TextView
            android:id="@+id/TextLayoutWelcomeBAck"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wallet2"
            android:textColor="@color/white"
            android:textSize="37sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/WelcomeBackTextAlt"
        android:layout_width="398dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <TextView
        android:id="@+id/emailAskingWelcomeBackAlt"
        android:layout_width="126dp"
        android:layout_height="26dp"
        android:text="@string/e_mail_address"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <EditText
        android:id="@+id/EditTextEmailWelcomeBackAlt"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:background="#251E34"
        android:hint="@string/enter_your_e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="15sp"
        android:textColor="@color/white"
        android:textColorHint="#757575"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <TextView
        android:id="@+id/PasswordAskingWelcomeBAckAlt"
        android:layout_width="126dp"
        android:layout_height="26dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <EditText
        android:id="@+id/EditTextPasswordWelcomeBackAlt"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:background="#251E34"
        android:hint="@string/enter_your_password"
        android:paddingStart="15sp"
        android:textColor="@color/white"
        android:textColorHint="#757575"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539" />

    <ToggleButton
        android:id="@+id/ImagePasswordEditTextAlt"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:textOff="@string/log_in"
        android:background="@drawable/vectoraltynai"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/ButtonLogInWelcomeBackAlt"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:background="@drawable/background_buttons_altynai"
        android:text="@string/log_in"
        android:textSize="25sp"
        android:onClick="onClickGoMainAlt1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <TextView
        android:id="@+id/orTextWelcomeBackAlt"
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:text="@string/or"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/SignInWithGoogleButtonWBAlt"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:background="@drawable/background_buttons_altynai"
        android:text="@string/sign_in_with_google"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <ImageView
        android:id="@+id/ImageOfGoogleWBAlt"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:background="@drawable/googlealtynailogo"
        android:contentDescription="@string/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />



</androidx.constraintlayout.widget.ConstraintLayout>
