<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".confirmation_code">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:text="@string/confirmation_code"
        android:textColor="@color/white"
        android:textSize="37sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="368dp"
        android:layout_height="28dp"
        android:text="@string/enter_the_code_sent_to_some_mail_com"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.048" />


    <EditText
        android:id="@+id/phone_number1"
        android:layout_width="54dp"
        android:layout_height="64dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/_1"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:background="#251E34"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phone_number4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <EditText
        android:id="@+id/phone_number2"
        android:layout_width="54dp"
        android:layout_height="64dp"
        android:layout_marginEnd="44dp"
        android:hint="@string/_4"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:background="#251E34"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <EditText
        android:id="@+id/phone_number3"
        android:hint="@string/_3"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_width="54dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:background="#251E34"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phone_number2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <EditText
        android:id="@+id/phone_number4"
        android:hint="@string/_2"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_width="54dp"
        android:layout_height="64dp"
        android:layout_marginEnd="36dp"
        android:background="#251E34"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phone_number3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

</androidx.constraintlayout.widget.ConstraintLayout>