<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ui.auth.signIn.CreatePasswordActivity"
    android:background="@drawable/background"
    >

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:background="@drawable/go_back_button_daniyar_second"
        android:contentDescription="@string/back_button_daniyar"
        android:onClick="onClickGoToBackToTradeHistory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="360sp"
        android:layout_height="50sp"
        android:text="@string/create_password_daniyarr"
        android:textColor="#FAFAFA"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <LinearLayout
        android:id="@+id/LinearLayout_codeedit_daniyar"
        android:layout_width="350sp"
        android:layout_height="59sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369">


        <EditText
            android:id="@+id/editTextdamiyar1"
            android:layout_width="47sp"
            android:layout_height="56sp"
            android:maxLength="1"
            android:autofillHints="postalCode"
            android:background="@drawable/button_corners_daniyar"
            android:digits="0123456789"
            android:gravity="center"
            android:hint="@string/_1_daniyar"
            android:inputType="number"
            android:textColorHint="#FAFAFA"
            android:textSize="19sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextdamiyar2"
            android:layout_width="47sp"
            android:layout_height="56sp"
            android:digits="0123456789"
            android:layout_marginStart="12sp"
            android:autofillHints="postalCode"
            android:background="@drawable/button_corners_daniyar"
            android:gravity="center"
            android:hint="@string/_number2_daniyar"
            android:maxLength="1"
            android:inputType="number"
            android:textColorHint="#FAFAFA"
            android:textSize="19sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextdamiyar3"
            android:layout_width="47sp"
            android:layout_height="56sp"
            android:digits="0123456789"
            android:maxLength="1"
            android:layout_marginStart="12sp"
            android:autofillHints="postalCode"
            android:background="@drawable/button_corners_daniyar"
            android:gravity="center"
            android:hint="@string/_number3_daniyar"
            android:inputType="number"
            android:textColorHint="#FAFAFA"
            android:textSize="19sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextdamiyar4"
            android:layout_width="47sp"
            android:layout_height="56sp"
            android:maxLength="1"
            android:layout_marginStart="12sp"
            android:autofillHints="postalCode"
            android:background="@drawable/button_corners_daniyar"
            android:gravity="center"
            android:hint="@string/_number_daniyar"
            android:digits="0123456789"
            android:inputType="number"
            android:textColorHint="#FAFAFA"
            android:textSize="19sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextdamiyar5"
            android:layout_width="47sp"
            android:layout_height="56sp"
            android:maxLength="1"
            android:layout_marginStart="12sp"
            android:autofillHints="postalCode"
            android:background="@drawable/button_corners_daniyar"
            android:gravity="center"
            android:hint="@string/_number5_daniyar"
            android:digits="0123456789"
            android:inputType="number"
            android:textColorHint="#FAFAFA"
            android:textSize="19sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextdamiyar6"
            android:layout_width="47sp"
            android:layout_height="56sp"
            android:maxLength="1"
            android:layout_marginStart="12sp"
            android:autofillHints="postalCode"
            android:background="@drawable/button_corners_daniyar"
            android:gravity="center"
            android:hint="@string/_number6_daniyar"
            android:digits="0123456789"
            android:inputType="number"
            android:textColorHint="#FAFAFA"
            android:textSize="19sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_enter_the_password_daniyar"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text="@string/enter_the_password_and_remember_it_the_password_is_required_to_unlock_the_wallet"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/ButtonContinueTradeHistory"
        android:layout_width="350sp"
        android:layout_height="50sp"
        android:background="@drawable/background_buttons_altynai"
        android:text="@string/continueTimeButton"
        android:textSize="20sp"
        android:onClick="onClickGoToBackupOf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />


</androidx.constraintlayout.widget.ConstraintLayout>